# transcription-pipeline

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml
